--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         <div class="row space"></div>
       </header>
       <div class="row">
-        <div class="col-12" id="first-img"></div>
+        <div class="col-12 big-img" id="first-img"></div>
         <div class="col-12 peach space"></div>
       </div>
       <div class="row">
+        <div class="col-12 light-green space"></div>
         <div class="col-12 light-green space"></div>
         <div class="col-12 light-green">
           <div class="col-3"></div>
@@ -36,11 +37,50 @@
           <div class="col-3"></div>
         </div>
         <div class="col-12 light-green space"></div>
+        <div class="col-12 light-green space"></div>
         <div class="col-12 peach space"></div>
       </div>
       <div class="row">
-        <div class="col-12" id="second-img"></div>
+        <div class="col-12 big-img" id="second-img"></div>
         <div class="col-12 peach space"></div>
+      </div>
+      <div class="row light-green">
+        <div class="col-12 light-green space"></div>
+        <div class="col-12 light-green space"></div>
+        <div class="col-12 light-green space"></div>
+        <div class="col-12" id="pictures-title">
+          <h3>Pictures</h3>
+        </div>
+        <div class="col-12" id="pictures">
+          <div class="col-2"></div>
+          <div class="col-2">
+            <img src="assets/img/a1.jpg" alt="">
+          </div>
+          <div class="col-2">
+            <img src="assets/img/a2.jpg" alt="">
+          </div>
+          <div class="col-2">
+            <img src="assets/img/a3.jpg" alt="">
+          </div>
+          <div class="col-2">
+            <img src="assets/img/a4.jpg" alt="">
+          </div>
+          <div class="col-2"></div>
+        </div>
+        <div class="col-12 light-green space"></div>
+        <div class="col-12 light-green space"></div>
+        <div class="col-12 light-green space"></div>
+        <div class="col-12 peach space"></div>
+        <div class="row">
+          <div class="col-12 big-img" id="third-img"></div>
+        </div>
+        <footer class="row">
+          <div class="col-12 peach space"></div>
+            <div class="col-12 peach">
+              <h4>Love Love Panda - Laboratoria 2017</h4>
+            </div>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
