Is responsive now <3

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
         </div>
         <div class="col-12" id="pictures">
           <div class="col-2"></div>
-          <div class="col-2">
+          <div class="col-2 img">
             <img src="assets/img/a1.jpg" alt="">
           </div>
-          <div class="col-2">
+          <div class="col-2 img">
             <img src="assets/img/a2.jpg" alt="">
           </div>
-          <div class="col-2">
+          <div class="col-2 img">
             <img src="assets/img/a3.jpg" alt="">
           </div>
-          <div class="col-2">
+          <div class="col-2 img">
             <img src="assets/img/a4.jpg" alt="">
           </div>
           <div class="col-2"></div>
