--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,800" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   </head>
   <body>
     <div class="container">
@@ -52,7 +53,7 @@
           <h3>Pictures</h3>
         </div>
         <div class="col-12" id="pictures">
-          <div class="col-2"></div>
+          <div class="col-2 hor-space"></div>
           <div class="col-2 img">
             <img src="assets/img/a1.jpg" alt="">
           </div>
@@ -65,7 +66,7 @@
           <div class="col-2 img">
             <img src="assets/img/a4.jpg" alt="">
           </div>
-          <div class="col-2"></div>
+          <div class="col-2 hor-space"></div>
         </div>
         <div class="col-12 light-green space"></div>
         <div class="col-12 light-green space"></div>
@@ -77,7 +78,7 @@
         <footer class="row">
           <div class="col-12 peach space"></div>
             <div class="col-12 peach">
-              <h4>Love Love Panda - Laboratoria 2017</h4>
+              <h4 id="footer-text">Love Love Panda - Laboratoria 2017</h4>
             </div>
           </div>
         </footer>
